# policeblotter

./: .gitignore  ACCESSIBILITY.md  CLAUDE.md  DATA-POLICY.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: accessibility.md  takedown-or-correction.md
.github/workflows/: deploy.yml  ingest.yml
data/: index.json
data/nisqually-jail/: 2026-05.json  2026-06.json  2026-07.json
data/raw/tcso-calls/: 2026-07-15T195858Z.csv  2026-07-16T164002Z.csv  2026-07-17T163423Z.csv  2026-07-18T160846Z.csv  2026-07-19T160814Z.csv  2026-07-20T164249Z.csv  2026-07-21T164026Z.csv  2026-07-22T164240Z.csv  (+1 more)
data/tcso-calls/: 2026-07.json
data/tcso-jail/: 2023-12.json  2024-01.json  2024-03.json  2024-06.json  2024-07.json  2024-09.json  2024-10.json  2024-11.json  2024-12.json  2025-01.json  2025-02.json  2025-04.json  2025-05.json  2025-06.json  2025-07.json  2025-08.json  2025-09.json  2025-10.json  2025-11.json  2025-12.json  2026-01.json  2026-02.json  2026-03.json  2026-04.json  2026-05.json  2026-06.json  2026-07.json
docs/status/: 2026-07-15-phase1-tcso-calls.md  2026-07-15-phase2-jail-bookings.md
ingest/: collect_full.py  full_schema.py  private_store.py  run.py  schema.py  store.py
ingest/sources/: nisqually.py  tcso_calls.py  tcso_jail.py
site/: app.js  index.html  robots.txt  style.css
tests/: test_full_pipeline.py  test_nisqually.py  test_nisqually_fetch.py  test_run.py  test_schema.py  test_store.py  test_tcso_calls.py  test_tcso_jail.py
tests/fixtures/: nisqually_detail.html  nisqually_results.html  tcso_detail.html  tcso_roster_list.html
